# spine_pbr

./: Cargo.toml  README.md
assets/: spine_pbr_frag.wgsl  spine_pbr_vert.wgsl
assets/pbr_showcase/: pbr_showcase.atlas  pbr_showcase.json
assets_src/pbr_showcase/: export.json  pbr_showcase.spine
crates/asset_exporter/: Cargo.toml
crates/asset_exporter/src/: lib.rs
src/: cursor.rs  main.rs  spine_pbr.rs
